# hypermap

./: CMakeLists.txt  README.md  package.xml  plugin_description.xml
config/: ase_planner.yaml  frontier_exploration.yaml  occupancy_mapping.yaml  rviz_automap.rviz  rviz_create_gt_sim_temp.rviz  rviz_semmapping.rviz  rviz_show_map.rviz  rviz_video_semmapping.rviz  semmapping.yaml  show_semmap.yaml
gazebo/worlds/: workshop_example.world
include/: boost_geometry_msgs.h  convert_boost.h  hypermap.h  maplayerbase.h  occupancygridlayer.h  semanticlayer.h  stb_image.h  stb_image_write.h  tf2_polygon_msgs.h  zip.hpp  zip_mz.hpp
launch/: amcl_node.launch  automap_real.launch  automap_simulation.launch  cob_image_flip_all.launch  cob_image_flip_missing.launch  cob_image_flip_missing_torso.launch  convert_to_pc.launch  launch_robot.launch  load_config.launch  load_map.launch  prepare_automap_cob.launch  publish_tf_static.launch  roscore_bag_play.launch  roscore_envsim_semmapping.launch  roscore_sim.launch  roscore_sim_semmapping.launch  roscore_sim_semmapping_torso.launch  roscore_sim_unify_scan.launch  rviz.launch  semmapping_floor_yolact.launch  semmapping_lab.launch  semmapping_lab_yolact.launch  semmapping_turtlebot_office.launch  semmapping_turtlebot_workshop.launch  show_semmap.launch  subscribe_gmapping.launch  subscribe_semmapping.launch  turtlebot_explore.launch  turtlebot_gmapping.launch  turtlebot_office_large.launch  turtlebot_office_navigation.launch  turtlebot_office_small.launch  turtlebot_prep_automap_office.launch  turtlebot_prep_automap_workshop.launch  turtlebot_sim_kitchen.launch  turtlebot_workshop.launch
maps/: gates.hmap  ipa_kitchen.hmap  ipa_kitchen_fixed.hmap  map_office_small.hmap  map_office_small_sem_gt.hmap  map_workshop.hmap  semantic_gt_2019-04-23-12-51-46.hmap  semantic_gt_2019-04-23-12-51-46_v1.yaml  semantic_gt_2019-04-23-12-51-46_v2.yaml  semantic_gt_2019-04-23-12-51-46_v3.yaml  semantic_gt_2019-05-27-16-34-23.hmap  semantic_gt_2019-05-27-16-34-23_v1.yaml  semantic_gt_2019-05-27-16-34-23_v2.yaml
maps/recorded_semmaps/: lab_rosbag_fixed_radius_05_no_thresh.hmap  lab_rosbag_fixed_radius_05_thresh_1.hmap  lab_rosbag_fixed_radius_05_thresh_2.hmap  lab_rosbag_t1_intersection.hmap  lab_rosbag_thresh1_pick_best.hmap  lab_rosbag_thresh2_pick_best.hmap  map_floor_t1.hmap  map_shape_analysis.hmap  map_shape_analysis_t13.hmap  map_shape_analysis_t15.hmap  map_shape_analysis_t2.hmap  map_shape_analysis_t3_new_convhull.hmap  map_shape_analysis_t4_no_boost_convhull.hmap  map_shape_analysis_t5_pcl_hull.hmap  map_shape_analysis_t6_remove_after_5.hmap  map_shape_analysis_t7_no_combine.hmap  map_shape_analysis_t8_higher_smoothness_thresh.hmap  map_t16.hmap  semantic_gt_2019-04-23-12-51-46.hmap
msg/: HypermapImage.msg  HypermapMetaData.msg  LayerMetaData.msg  SemanticMap.msg  SemanticObject.msg
src/: hypermap.cpp  hypermapdisplay.cpp  hypermapdisplay.h  map_generator.cpp  map_server.cpp  maplayerbase.cpp  occupancygridlayer.cpp  semanticlayer.cpp  stb_image.cpp  stb_image_write.cpp
srv/: RetrieveStrVals.srv
test/: hmap_example.hmap  map_server_test.test  test_hypermap.cpp
urdf/: turtlebot_common_library.urdf.xacro  turtlebot_gazebo.urdf.xacro  turtlebot_properties.urdf.xacro
urdf/robots/: kobuki_hexagons_asus_xtion_pro.urdf.xacro
urdf/sensors/: asus_xtion_pro.urdf.xacro
